examples/test/testpolicy767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy767
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key11: value4
      key23: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value22
          key43: value2
      podSelector:
        matchLabels:
          key39: value27
          key4: value40
          key48: value29
